# recipe-box-ex1-baraiz

./: README.md  main.py  pyproject.toml  requests.http
app/: config.py  dependencies.py  main.py  models.py  repository.py
tests/: conftest.py  test_recipes.py
